# Tictactoe.AI

./: CMakeLists.txt  README.md  build.yml  launch.json  main.cpp  run.sh  tasks.json
ITPLib/: gevent.h
src/: CMakeLists.txt  tttgame.cpp  tttgame.h  tttgameai.cpp  tttgameai.h  tttgamedata.h
tests/: CMakeLists.txt  catch.cpp  catch_reporter_github.hpp  studentTests.cpp
